--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p th:text="'当前环境：' + ${environment}"/>
-<p th:text="'当前用户：' + ${username}"/>
+<p th:text="'用户名：' + ${username}"/>
 </body>
 </html>
